--- a/src/scss/woocommerce/_list.scss
+++ b/src/scss/woocommerce/_list.scss
@@ -44,7 +44,7 @@
   &__center {
     text-align: center;
 
-    .woocommerce-result-count {
+    .woocommerce-result-count,#rv-result-count {
       font-size: .9rem;
       color: #6b7280;
       margin: 0;
@@ -122,7 +122,7 @@
     display: inline-flex;
     align-items: center;
     gap: 1.5rem;
-    font-size: 15px;
+    font-size: 13px;
     font-weight: 400;
     height: 62px;
   }
