--- a/src/scss/woocommerce/_filters.scss
+++ b/src/scss/woocommerce/_filters.scss
@@ -115,7 +115,7 @@ button.btn.btn-primary.yith-wcan-reset-filters.reset-filters {
    STOCK FILTER – TOGGLE SWITCH
    =============================== */
 
-.filter-item.filter-in-stock {
+.filter-item.filter-in-stock, .filter-item.filter-on-sale {
 
   label {
     position: relative;
