--- a/src/scss/woocommerce/_index.scss
+++ b/src/scss/woocommerce/_index.scss
@@ -11,3 +11,4 @@
 @forward 'single-product/related';
 @forward 'single-product/tabs';
 @forward 'single-product/summary';
+@forward 'single-product/same-cat-products';
