--- a/src/scss/woocommerce/single-product/_summary.scss
+++ b/src/scss/woocommerce/single-product/_summary.scss
@@ -503,7 +503,7 @@
     }
 
     svg {
-      width: 14px;
+      width: 11px;
       height: 8px;
       stroke: #111;
     }
@@ -539,7 +539,7 @@
     justify-content: space-between;
     align-items: baseline;
     margin-top: 1vh;
-    display: none;
+    display: none !important;
 
     .woocommerce-variation-description {
       display: none;
