--- a/src/scss/components/items/_item-product.scss
+++ b/src/scss/components/items/_item-product.scss
@@ -59,11 +59,12 @@
     inset: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     transform: scale(1);
     transition: opacity .4s ease, transform .45s ease;
     transition-delay: 0.2s;
     display: block;
+    background: #fafafa;
 
     &--main {
       opacity: 1;
