--- a/src/scss/base/_forms.scss
+++ b/src/scss/base/_forms.scss
@@ -64,7 +64,10 @@ textarea:focus {
   input,
   textarea,
   select {
-    padding-top: 0.5rem;
+    padding-top: 1.2rem;
+    height: 2.5rem;
+    margin-bottom: 0;
+    font-size: 1rem;
   }
 
   label {
@@ -72,7 +75,7 @@ textarea:focus {
     left: 0;
     top: 50%;
     transform: translateY(-50%);
-    font-size: 0.95rem;
+    font-size: 0.9rem;
     color: #6b7280;
     pointer-events: none;
     transition: top 0.16s ease,
@@ -87,7 +90,7 @@ textarea:focus {
   select:focus + label,
   input:not(:placeholder-shown) + label,
   textarea:not(:placeholder-shown) + label {
-    top: 15px;
+    top: 12px;
     transform: translateY(-100%);
     font-size: 0.75rem;
     color: #111827;
@@ -114,14 +117,14 @@ textarea:focus {
 
   /* 1️⃣ Όταν υπάρχει focus σε input Ή στο eye button */
   &:focus-within > label {
-    top: 15px;
+    top: 12px;
     transform: translateY(-100%);
     font-size: 0.75rem;
     color: #111827;
   }
 
   &.has-value > label {
-    top: 15px;
+    top: 12px;
     transform: translateY(-100%);
     font-size: 0.75rem;
     color: #111827;
