--- a/src/scss/woocommerce/_index.scss
+++ b/src/scss/woocommerce/_index.scss
@@ -12,3 +12,4 @@
 @forward 'single-product/tabs';
 @forward 'single-product/summary';
 @forward 'single-product/same-cat-products';
+@forward 'single-product/video-box';
