--- a/src/scss/base/_forms.scss
+++ b/src/scss/base/_forms.scss
@@ -64,9 +64,9 @@ textarea:focus {
   input,
   textarea,
   select {
-    padding-top: 1.2rem;
+    padding-top: 1rem;
     height: 2.5rem;
-    margin-bottom: 0;
+    margin-bottom: 5px;
     font-size: 1rem;
   }
 
