--- a/src/scss/components/header/_shop-header.scss
+++ b/src/scss/components/header/_shop-header.scss
@@ -73,7 +73,7 @@
       max-height: 150px;
       width: 100%;
       max-width: 250px;
-      transition: ease-in-out 0.2s;
+      transition: ease-in-out 0.35s;
     }
   }
 
@@ -156,19 +156,7 @@
       .header-link {
         padding: 5px 8px;
 
-        span.count {
-          display: none;
-          background: black;
-          width: 17px;
-          height: 17px;
-          justify-content: center;
-          align-items: center;
-          border-radius: 50px;
-          margin-left: 7px;
-          color: #fff;
-          font-size: 13px;
-          line-height: 1;
-        }
+
       }
 
       &:hover {
@@ -203,29 +191,37 @@
     align-items: center;
     cursor: pointer;
 
-    &::after {
-      content: '';
-      display: block;
-      width: 5px;
-      height: 5px;
-      background: $secondary-color;
-      border-radius: 50px;
-    }
-
-    .cart-contents-count {
-      position: absolute;
-      top: -8px;
-      right: -12px;
-      background: #000;
-      color: #fff;
-      width: 20px;
-      height: 20px;
-      border-radius: 9999px;
+    .cart-contents {
       display: flex;
+      gap: 10px;
       align-items: center;
-      justify-content: center;
-      font-size: 0.6rem;
-      font-weight: 600;
+
+      .count-wrapper {
+        background: $secondary-color;
+        color: #fff;
+        min-width: 8px;
+        min-height: 8px;
+        border-radius: 9999px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 0.6rem;
+        font-weight: 600;
+        margin: 0;
+
+        span.count {
+          width: 15px;
+          height: 15px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          color: $primary-color;
+          border-radius: 50px;
+          font-size: 12px;
+          line-height: 1;
+          margin: 0;
+        }
+      }
     }
   }
 
@@ -394,7 +390,8 @@
 
         .head_item {
           padding: 0;
-          .header-link{
+
+          .header-link {
             padding: 0;
           }
 
