--- a/src/scss/components/header/_shop-header.scss
+++ b/src/scss/components/header/_shop-header.scss
@@ -220,6 +220,7 @@
           font-size: 12px;
           line-height: 1;
           margin: 0;
+          padding: 10px;
         }
       }
     }
