single product new sections

--- a/src/scss/woocommerce/_index.scss
+++ b/src/scss/woocommerce/_index.scss
@@ -11,5 +11,7 @@
 @forward 'single-product/related';
 @forward 'single-product/tabs';
 @forward 'single-product/summary';
+@forward 'single-product/contact_banner';
 @forward 'single-product/same-cat-products';
 @forward 'single-product/video-box';
+@forward 'single-product/product-catalog';
