--- a/src/scss/woocommerce/_list.scss
+++ b/src/scss/woocommerce/_list.scss
@@ -87,10 +87,9 @@
     &__dropdown {
       position: absolute;
       top: calc(100% + 6px);
-      right: 0;
-      width: max-content;
-      min-width: 220px;
-      max-width: 400px;
+      right: -20px;
+      width: min-content;
+      min-width: 260px;
       background: rgba(255, 255, 255, 0.79);
       color: $primary-color;
       backdrop-filter: blur(4px);
