--- a/src/scss/woocommerce/single-product/_gallery.scss
+++ b/src/scss/woocommerce/single-product/_gallery.scss
@@ -9,7 +9,7 @@
   flex-direction: column;
   gap: 15px;
 
-  @media (min-width: 768px) {
+  @media (min-width: 992px) {
     flex-direction: row-reverse;
     gap: 20px;
   }
@@ -144,12 +144,12 @@
   opacity: 1;
 
 
-  @media (min-width: 768px) {
+  @media (min-width: 992px) {
     width: 100px;
   }
 
   .swiper-wrapper {
-    @media (min-width: 768px) {
+    @media (min-width: 992px) {
       flex-direction: column;
       justify-content: flex-end;
       align-items: center;
@@ -193,7 +193,7 @@
   padding: 5px;
   display: flex;
   justify-content: center;
-  @media (min-width: 768px) {
+  @media (min-width: 992px) {
     max-width: 100px;
   }
 
@@ -218,7 +218,7 @@
   }
 }
 
-@media (max-width: 900px) {
+@media (max-width: 992px) {
   .woocommerce-product-gallery {
     grid-template-columns: 1fr;
     display: grid;
@@ -237,13 +237,14 @@
 
 
 /* Responsive adjustments */
-@media (max-width: 767px) {
+@media (max-width: 992px) {
   .rv-gallery-thumbs {
     .swiper-wrapper {
       height: auto;
+      justify-content: center;
       .swiper-slide {
-        width: 60px;
-        height: 60px;
+        width: 60px !important;
+        height: 60px !important;
       }
     }
   }
