--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -24,7 +24,7 @@ $bg-dark: #f0f0f0;
 // Aeonik Pro Font Faces
 @font-face {
   font-family: 'Aeonik Pro';
-  src: url('/wp-content/themes/Ruined/src/fonts/AeonikPro/AeonikProRegular.otf') format('opentype');
+  src: url('/wp-content/themes/Ruined/src/fonts/AeonikPro/AeonikProRegular.woff2') format('opentype');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -32,7 +32,7 @@ $bg-dark: #f0f0f0;
 
 @font-face {
   font-family: 'Aeonik Pro';
-  src: url('/wp-content/themes/Ruined/src/fonts/AeonikPro/AeonikProMedium.otf') format('opentype');
+  src: url('/wp-content/themes/Ruined/src/fonts/AeonikPro/AeonikProMedium.woff2') format('opentype');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -40,7 +40,7 @@ $bg-dark: #f0f0f0;
 
 @font-face {
   font-family: 'Aeonik Pro';
-  src: url('/wp-content/themes/Ruined/src/fonts/AeonikPro/AeonikProBold.otf') format('opentype');
+  src: url('/wp-content/themes/Ruined/src/fonts/AeonikPro/AeonikProBold.woff2') format('opentype');
   font-weight: 600 700;
   font-style: normal;
   font-display: swap;
