--- a/src/scss/layout/_pages-hero.scss
+++ b/src/scss/layout/_pages-hero.scss
@@ -14,6 +14,7 @@
   align-items: center;
   background-attachment: fixed;
   margin-bottom: 5vh;
+  overflow: hidden;
 
   &--dark {
     .pages-hero__title,
@@ -31,7 +32,14 @@
       color: #fff;
     }
   }
-
+  &__bg {
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 0;
+  }
   &__video-wrapper {
     position: absolute;
     inset: 0;
@@ -66,6 +74,7 @@
   &__overlay {
     position: absolute;
     inset: 0;
+    z-index: 1;
     background: linear-gradient(150deg, #000000bd, #2c572600);
   }
 
@@ -74,7 +83,7 @@
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    z-index: 1;
+    z-index: 2;
     margin: 0 auto;
     padding: 1rem;
     height: 100%;
