--- a/src/scss/pages/services/_hero.scss
+++ b/src/scss/pages/services/_hero.scss
@@ -14,6 +14,15 @@
   align-items: center;
   background-attachment: fixed;
 
+  &__bg {
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 0;
+  }
+
   &__video-wrapper {
     position: absolute;
     inset: 0;
@@ -48,6 +57,7 @@
   &__overlay {
     position: absolute;
     inset: 0;
+    z-index: 1;
     background: linear-gradient(150deg, #000000bd, #2c572600);
   }
 
@@ -56,7 +66,7 @@
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    z-index: 1;
+    z-index: 2;
     margin: 0 auto;
     padding: 1rem;
     height: 100%;
